#34951 Added Logistics Provider Configuration in Super Admin.

--- a/localization/en.json
+++ b/localization/en.json
@@ -104,6 +104,10 @@
   "admin.deleteCompanyGenericProduct": "Delete Company Generic Product",
   "admin.addCompany": "Add Company",
   "admin.addUser": "Add User",
+  "admin.searchLogisticsProvider": "Search Logistics Provider",
+  "admin.admin": "Re-Invoice",
+  "admin.addLogisticsProvider": "Add Logistics Provider",
+  "admin.editLogisticsProvider": "Edit Logistics Provider",
   "broadcast.byRegion": "By Region",
   "broadcast.byCompany": "By Company",
   "broadcast.controls": "Broadcast Controls",
@@ -269,6 +273,7 @@
   "casProduct.internationalKECL": "KECL",
   "global.placeholder.taxId": "Enter Tax ID",
   "global.placeholder.deliveryNotes": "Write delivery notes here",
+  "global.placeholder.notes": "Write notes here",
   "global.from": "From",
   "global.company": "Company",
   "global.clientCompany": "Guest Company",
@@ -1028,6 +1033,8 @@
   "confirm.operations.denyRequest.content": "Do you really want to deny '{name}' create request?",
   "confirm.operations.deleteRequest.title": "Delete Create Request?",
   "confirm.operations.deleteRequest.content": "Do you really want to delete '{name}' create request?",
+  "confirm.admin.deleteLogisticProvider.title": "Delete Logistic Provider",
+  "confirm.admin.deleteLogisticProvider.content": "Do you really want to delete '{name}' logistic provider?",
   "login.username": "Username",
   "login.password": "Password",
   "login.login": "LOG IN",
@@ -2149,6 +2156,10 @@
   "logistics.label.password": "Password",
   "logistics.placeholder.apiKey": "Enter API key",
   "logistics.label.apiKey": "API key",
+  "logistics.identifierType": "Identifier Type",
+  "logistics.identifierValue": "Identifier Value",
+  "logistics.reinvoice": "Re-Invoice",
+  "logistics.note": "Note",
   "marketplace.available": "Available PKGs",
   "marketplace.packaging": "Packaging",
   "marketplace.quantity": "Quantity",
