#34548 Velloci Onboarding UX & Bank Accounts fixes.

--- a/localization/en.json
+++ b/localization/en.json
@@ -37,8 +37,7 @@
   "auth.sessionTimeout.buttonLogOut": "Log Out",
   "auth.sessionTimeout.buttonKeepWorking": "Keep Working",
   "admin.editAlternativeNames": "Edit Alternative Names",
-  "admin.registerDwollaAccount": "Register Dwolla Account",
-  "admin.registerVellociAccount": "Register Velloci Account",
+  "admin.registerToPaymentProcessor": "Register to Payment Processor",
   "admin.resendWelcomeEmail": "Resend Welcome Email",
   "admin.takeOver": "Take-over as Company Admin",
   "broadcast.saveTemplate": "Save as Template",
@@ -374,6 +373,7 @@
   "global.businessClassification": "Business Classification",
   "global.ein": "EIN",
   "global.back": "Back",
+  "global.paymentAccount": "Payment Account",
   "global.hazardClasses": "Hazard Classes",
   "global.dwollaAccount": "Dwolla Account",
   "global.vellociAccount": "Velloci Account",
@@ -2161,7 +2161,6 @@
   "logistics.placeholder.username": "Enter username",
   "logistics.label.password": "Password",
   "logistics.placeholder.apiKey": "Enter API key",
-  "logistics.label.apiKey": "API key",
   "logistics.identifierType": "Identifier Type",
   "logistics.identifierValue": "Identifier Value",
   "logistics.reinvoice": "Re-Invoice",
