#34548 Velloci Onboarding UX, Bank Accounts page, and Checkout payment options fixes.

--- a/localization/en.json
+++ b/localization/en.json
@@ -2018,6 +2018,7 @@
   "settings.amountNum": "Amount {num}",
   "settings.accountName": "Account Name",
   "settings.verified": "Verified",
+  "settings.active": "Active",
   "settings.unverified": "Unverified",
   "settings.verificationInProcess": "Verification in process",
   "settings.preferred": "Preferred",
@@ -2719,6 +2720,8 @@
   "velloci.formationDocument.optionalContent": "Articles of Incorporation, Certificate of Formation, Articles of Organization",
   "velloci.formationDocument.uploadDocuments": "Upload PNG, JPEG or PDF formats. ",
   "velloci.formationDocument.availableDocuments": "Add as many documents as you have available.",
+  "velloci.formationDocument.documentTypeLabel": "Select document type",
+  "velloci.formationDocument.documentTypePlaceholder": "Pick one",
   "velloci.ownerInformation.infoContent": "This information is required under the Bank Secrecy Act and is intended to assist the government and law enforcement int the ongoing fight against money laundering and the financing of terrorism.",
   "velloci.ownerInformation.requiredTitle": "Required information under the Bank Secrecy Act",
   "velloci.ownerInformation.beneficialOwner": "Are you the beneficial owner?",
