#34548 Updated Velloci registration pages/fields, fixed purchase order call.

--- a/localization/en.json
+++ b/localization/en.json
@@ -2739,7 +2739,9 @@
   "velloci.personalInfo.middleName.placeholder": "Enter middle name",
   "velloci.personalInfo.lastName.placeholder": "Enter last name",
   "velloci.personalInfo.homeAddress": "Home Address",
-  "velloci.personalInfo.businessRole": "Business Role (Title)",
+  "velloci.personalInfo.businessRole": "Business Role",
+  "velloci.personalInfo.businessTitle": "Business Title",
+  "velloci.personalInfo.businessTitle.placeholder": "Enter Business Title",
   "velloci.personalInfo.socialSecurityNumber": "Social Security Number",
   "velloci.personalInfo.socialSecurityNumber.placeholder": "XXX-XX-XXXX",
   "velloci.personalInfo.businessOwnershipPercentage": "Business Ownership Percentage",
