#34845 Fixed delete popups header or content in Association, CAS Product, and Company Generic Product pages.

--- a/localization/en.json
+++ b/localization/en.json
@@ -999,6 +999,8 @@
   "confirm.deletePackaging.content": "Do you really want to delete '{name}' unit?",
   "confirm.deleteTemplate.title": "Delete Template",
   "confirm.deleteTemplate.content": "Do you really want to delete template {name}?",
+  "confirm.deleteAssociation.title": "Delete Association",
+  "confirm.deleteAssociation.content": "Do you really want to delete '{name}' association?",
   "confirm.logisticsAccount.title": "Delete Logistics Account",
   "confirm.logisticsAccount.content": "Do you really want to delete logistics account '{name}'?",
   "confirm.missingCOfA.title": "Missing C of A",
@@ -1008,7 +1010,7 @@
   "confirm.broadcast.unsavedChanges.header": "Unsaved changes",
   "confirm.broadcast.unsavedChanges.content": "You have unsaved broadcast rules changes. Do you wish to save them?",
   "confirm.deleteCompanyGenericProduct.title": "Delete Company Generic Product?",
-  "confirm.deleteCompanyGenericProduct.content": "Do you really want to delete {name} company generic product?",
+  "confirm.deleteCompanyGenericProduct.content": "Do you really want to delete '{name}' company generic product?",
   "confirm.global.unsavedChanges.header": "Unsaved changes",
   "confirm.global.unsavedChanges.content": "You have unsaved changes. Do you wish to save them?",
   "confirm.markOrderAsShipped.title": "Mark Order as Shipped?",
