#34978 Fixed Dashboard field titles.

--- a/localization/en.json
+++ b/localization/en.json
@@ -2626,9 +2626,9 @@
   "validation.minOneCompany": "At least one company should be selected",
   "dashboard.title": "Analytics Dashboard",
   "dashboard.totalCompanies.title": "Total Companies",
-  "dashboard.totalClientCompanies.title": "Total Client Companies",
+  "dashboard.totalGuestCompanies.title": "Total Guest Companies",
   "dashboard.totalProducts.title": "Total Products",
-  "dashboard.totalClientProducts.title": "Total Client Products",
+  "dashboard.totalGuestProducts.title": "Total Guest Products",
   "dashboard.totalValue.title": "Total Products Value $M",
   "dashboard.totalValueWithoutMilion.title": "Total Products Value $",
   "dashboard.totalBroadcastedValue.title": "Total Broadcasted Value $M",
@@ -2651,7 +2651,7 @@
   "dasboard.average": " average",
   "dashboard.dailyStats": "DAILY STATS",
   "dashboard.daily.stats.title": "Daily Statistics",
-  "dashboard.clientCompaniesCount": "# of Client Companies",
+  "dashboard.guestCompaniesCount": "# of Guest Companies",
   "dashboard.companiesCount": "# of Companies",
   "dashboard.companyGenericProductsCount": "# of Company Generic Products",
   "dashboard.productOffersCount": "# of Product Offers",
