#34833 Updated Company and Admin Dashboards.

--- a/localization/en.json
+++ b/localization/en.json
@@ -2168,6 +2168,7 @@
   "logistics.identifierValue": "Identifier Value",
   "logistics.reinvoice": "Re-Invoice",
   "logistics.note": "Note",
+  "logistics.emailInfo": "When generated, BOL will be sent to provided email addresses. If kept empty, BOL will not be sent automatically.",
   "marketplace.available": "Available PKGs",
   "marketplace.packaging": "Packaging",
   "marketplace.quantity": "Quantity",
@@ -2662,7 +2663,7 @@
   "dashboard.totalPOValue": "Total Product Offer Value",
   "dashboard.totalValueBroadcastedPO": "Total Value of Broadcasted Product Offers",
   "dashboard.stats.type": "Stats Type",
-  "dashboard.dateFilter.today": "Today",
+  "dashboard.dateFilter.lastDay": "Last day",
   "dashboard.dateFilter.thisWeek": "This week",
   "dashboard.dateFilter.lastWeek": "Last week",
   "dashboard.dateFilter.thisMonth": "This month",
