--- a/localization/en.json
+++ b/localization/en.json
@@ -2794,5 +2794,10 @@
   "velloci.document.explanatory.li21": "Filed and stamped Articles of Organization or Incorporation",
   "velloci.document.explanatory.li22": "Sales/Use Tax License",
   "velloci.document.explanatory.li23": "Business License",
-  "velloci.document.explanatory.li24": "Certificate of Good Standing"
+  "velloci.document.explanatory.li24": "Certificate of Good Standing",
+  "submitOffer.optionToOffer": "Option to offer",
+  "submitOffer.optionToOffer.placeholder": "Select option",
+  "submitOffer.price": "Price",
+  "submitOffer.expirationDate": "Expiration Date",
+  "submitOffer.quantity": "Quantity"
 }
