added reload bankAccounts, and validation on another velloci statuses

--- a/localization/en.json
+++ b/localization/en.json
@@ -2767,12 +2767,21 @@
   "velloci.info.deactivated": "You can start Velloci account registration now.",
   "velloci.info.retry": "Please retry Velloci registration with all fields filled-in (not just required ones).",
   "velloci.info.document": "Please verify you business by attaching following documents:",
-  "velloci.info.suspended": "Please contact support.",
+  "velloci.info.pending_kyb": "Your account is still in review status.",
+  "velloci.info.member_pending": "Your account is still in review status.",
+  "velloci.info.member_review": "Your account is still in review status.",
+  "velloci.info.member_unverified": "Your account verification has failed. Please contact support.",
+  "velloci.info.member_failed": "Your account verification has failed. Please contact support.",
   "velloci.registrationStatus.none": "none",
   "velloci.registrationStatus.retry": "retry",
   "velloci.registrationStatus.document": "document",
   "velloci.registrationStatus.suspended": "suspended",
   "velloci.registrationStatus.deactivated": "deactivated",
+  "velloci.registrationStatus.pending_kyb": "Pending KYB",
+  "velloci.registrationStatus.member_pending": "Member Pending",
+  "velloci.registrationStatus.member_review": "Member review",
+  "velloci.registrationStatus.member_unverified": "Member unverified",
+  "velloci.registrationStatus.member_failed": "Member failed",
   "velloci.document.verifywithdocument": "to identify Controlling person",
   "velloci.document.verifybusinesswithdocument": "to identify Business",
   "velloci.document.verifycontrollerandbusinesswithdocument": "to identify both Controlling person and Business",
