fixed warning validation PKGs

--- a/localization/en.json
+++ b/localization/en.json
@@ -1649,6 +1649,7 @@
   "validation.minimum": "Minimum is {min}",
   "validation.maximum": "Maximum is {max}",
   "validation.greaterThan": "Must be greater than {value}",
+  "validation.isLessThan": "Warning. PKGs Available is less than Minimum PKGs.",
   "validation.greaterOrEqual": "Must be greater or equal to {value}",
   "validation.maxDecimals": "There can be maximally {max} decimal places",
   "validation.mustBeNumber": "Must be a number",
