added changes in velloci register

--- a/localization/en.json
+++ b/localization/en.json
@@ -2708,13 +2708,13 @@
   "velloci.controlPerson.establishedUs": "Established in the US?",
   "velloci.businessInfo.subtitle": "Let us know how to reach you",
   "velloci.ownerInformation.subtitle": "Information needed for Beneficial Owners {percentage} or greater",
-  "velloci.businessInfo.phoneNumber": "Personal Phone Number",
+  "velloci.businessInfo.phoneNumber": "Business Phone Number",
   "velloci.businessInfo.phoneNumber.placeholder": "Enter phone number",
   "velloci.businessInfo.emailAddress.placeholder": "Enter your email address",
   "velloci.businessInfo.emailAddress": "Email Address",
   "velloci.businessInfo.url.placeholder": "Enter your business URL",
   "velloci.businessInfo.url": "URL",
-  "velloci.businessInfo.legalAddress": "Your Legal Address",
+  "velloci.businessInfo.legalAddress": "Business Address",
   "velloci.businessInfo.dbaName": "DBA Name  (if applicable)",
   "velloci.businessInfo.dbaName.placeholder": "Business Name",
   "velloci.businessInfo.meanTitle": "What does this mean?",
