--- a/localization/en.json
+++ b/localization/en.json
@@ -2101,7 +2101,7 @@
   "settings.tables.bankAccounts.registerDwolla": "Register Dwolla Account",
   "settings.tables.bankAccounts.uploadDoc": "Upload Documents",
   "settings.tables.bankAccounts.uploadOwnerDoc": "Upload Owner Documents",
-  "settings.tables.bankAccounts.registerVelloci": "Register Velloci Account",
+  "settings.tables.bankAccounts.registerVelloci": "Register Account",
   "settings.bankAccounts.uploadDoc.passport": "Passport",
   "settings.bankAccounts.uploadDoc.license": "License",
   "settings.bankAccounts.uploadDoc.idcard": "ID Card",
@@ -2762,12 +2762,12 @@
   "velloci.termsAndConditions.serviceTerms.link": "Service terms ",
   "global.dateFrom": "Date From",
   "global.dateTo": "Date To",
-  "settings.vellociAccBalance": "Velloci Balance: ",
-  "velloci.registrationStatus": "Velloci Registration Status",
+  "settings.vellociAccBalance": "Balance: ",
+  "velloci.registrationStatus": "Registration Status",
   "velloci.info": "Info",
-  "velloci.info.none": "You can start Velloci account registration now.",
-  "velloci.info.deactivated": "You can start Velloci account registration now.",
-  "velloci.info.retry": "Please retry Velloci registration with all fields filled-in (not just required ones).",
+  "velloci.info.none": "You can start account registration now.",
+  "velloci.info.deactivated": "You can start account registration now.",
+  "velloci.info.retry": "Please retry registration with all fields filled-in (not just required ones).",
   "velloci.info.document": "Please verify you business by attaching following documents:",
   "velloci.info.pending_kyb": "Your account is still in review status.",
   "velloci.info.member_pending": "Your account is still in review status.",
