adjust dollar symbol on Dashboard

--- a/localization/en.json
+++ b/localization/en.json
@@ -2634,10 +2634,10 @@
   "dashboard.totalGuestCompanies.title": "Total Guest Companies",
   "dashboard.totalProducts.title": "Total Products",
   "dashboard.totalGuestProducts.title": "Total Guest Products",
-  "dashboard.totalValue.title": "Total Products Value $M",
-  "dashboard.totalValueWithoutMilion.title": "Total Products Value $",
-  "dashboard.totalBroadcastedValue.title": "Total Broadcasted Value $M",
-  "dashboard.totalBroadcastedValueWithoutMilion.title": "Total Broadcasted Value $",
+  "dashboard.totalValue.title": "Total Products Value",
+  "dashboard.totalValueWithoutMilion.title": "Total Products Value",
+  "dashboard.totalBroadcastedValue.title": "Total Broadcasted Value",
+  "dashboard.totalBroadcastedValueWithoutMilion.title": "Total Broadcasted Value",
   "dashboard.totalUsersCount.title": "Total Users Count",
   "dasboard.sales.graph.title": "Total Sum Of Sales Monthly",
   "dasboard.companyPurchase.graph.title": "Company Sum Of Purchases Monthly",
