#35092 Updated Company Dashboard.

--- a/localization/en.json
+++ b/localization/en.json
@@ -2635,7 +2635,7 @@
   "dashboard.totalCompanies.title": "Total Companies",
   "dashboard.totalGuestCompanies.title": "Total Guest Companies",
   "dashboard.totalProducts.title": "Total Products",
-  "dashboard.totalGuestProducts.title": "Total Guest Products",
+  "dashboard.totalGuestProducts.title": "Total Products",
   "dashboard.totalValue.title": "Total Products Value",
   "dashboard.totalValueWithoutMilion.title": "Total Products Value",
   "dashboard.totalBroadcastedValue.title": "Total Broadcasted Value",
