#35146 Added "+ Create" dropdown in header.

--- a/localization/en.json
+++ b/localization/en.json
@@ -1631,6 +1631,13 @@
   "cart.holdRequestInfo": "2. Hold Request Info",
   "cart.freightCost": "Freight Cost",
   "cart.or": "OR",
+  "createMenu.create": "Create",
+  "createMenu.newProduct": "New Product",
+  "createMenu.newListing": "New Listing",
+  "createMenu.newWanted": "New Wanted",
+  "createMenu.newUser": "New User",
+  "createMenu.newGuest": "New Guest",
+  "createMenu.newWarehouse": "New Warehouse",
   "validation.required": "Required",
   "validation.dateInFuture": "Date must be in future",
   "validation.dateInPast": "Date must be in past",
