--- a/localization/en.json
+++ b/localization/en.json
@@ -2458,6 +2458,8 @@
   "title.settings.locations": "Locations",
   "title.inventory.myProducts": "My Products",
   "title.inventory.myListings": "My Listings",
+  "title.companies.users": "Users",
+  "title.companies.companies": "Companies",
   "holds.intProductName": "Product Name",
   "holds.pkgsHeld": "Quantity",
   "holds.expirationTime": "Expires",
