refresh token agter unathorized requested return back

--- a/localization/en.json
+++ b/localization/en.json
@@ -57,8 +57,11 @@
   "error.forbidden.content": "You don't have permission to access this page on this server.",
   "error.forbidden.title": "ERROR 403 FORBIDDEN",
   "error.notFound.content": "The page you were looking doesn't exist. We think the page may have moved.",
+  "error.serverError.content": "The request has some problem on the server.",
   "error.notFound.title": "ERROR 404 NOT FOUND",
+  "error.serverError.title": "INTERNAL SERVER ERROR 500",
   "error.bringMeBack": "Bring me back to last page",
+  "error.logout": "Logout. ",
   "success.title": "Success!",
   "admin.duplicateName": "Duplicate name!",
   "admin.clickToSave": "Click to save",
