--- a/localization/en.json
+++ b/localization/en.json
@@ -179,6 +179,9 @@
   "navigation.wantedBoardListings": "Listings",
   "navigation.wantedBoardBidsSent": "Bids Sent",
   "navigation.wantedBoardBidsReceived": "Bids Received",
+  "navigation.cas-products": "Cas Products",
+  "navigation.product-catalog": "Product Catalog",
+  "navigation.product-groups": "Product Groups",
   "dwolla.controllerTitlePopup": "Please read below for the definition of Controller in this context.",
   "dwolla.paymentPoweredBy": "Echo Global Chemical Exchange payment gateway is powered by:",
   "dwolla.confirmAcc": "Confirm Account Administrator Information",
@@ -2460,6 +2463,9 @@
   "title.inventory.myListings": "My Listings",
   "title.companies.users": "Users",
   "title.companies.companies": "Companies",
+  "title.products.casProducts": "Cas Products",
+  "title.products.productCatalog": "Product Catalog",
+  "title.products.productGroups": "Product Groups",
   "holds.intProductName": "Product Name",
   "holds.pkgsHeld": "Quantity",
   "holds.expirationTime": "Expires",
