#35169 Removed 'Velloci' name from pages.

--- a/localization/en.json
+++ b/localization/en.json
@@ -2763,10 +2763,10 @@
   "velloci.termsAndConditions.title": "Here are a few legal terms that you'll have to read and accept before finishing",
   "velloci.termsAndConditions.electronicComunications": "I agree that I have read, understood and consent to the ",
   "velloci.termsAndConditions.electronicComunications.link": "Electronic Communications Agreement ",
-  "velloci.termsAndConditions.privacyPolicy": "I agree that I have read, understood and consent to Velloci's ",
+  "velloci.termsAndConditions.privacyPolicy": "I agree that I have read, understood and consent to the ",
   "velloci.termsAndConditions.privacyPolicy.link": "Privacy Policy ",
   "velloci.termsAndConditions.termsOfUse.link": "Terms of Use",
-  "velloci.termsAndConditions.depositAccountAgreement": "I agree that I have read, understood and consent to Banks's ",
+  "velloci.termsAndConditions.depositAccountAgreement": "I agree that I have read, understood and consent to the bank's ",
   "velloci.termsAndConditions.depositAccountAgreement.link": "Deposit Account Agreement ",
   "velloci.termsAndConditions.serviceTerms.link": "Service terms ",
   "global.dateFrom": "Date From",
