--- a/localization/en.json
+++ b/localization/en.json
@@ -185,6 +185,22 @@
   "navigation.cas-products": "Cas Products",
   "navigation.product-catalog": "Product Catalog",
   "navigation.product-groups": "Product Groups",
+  "navigation.operations.shipping-quotes": "Shipping Quotes",
+  "navigation.operations.tags": "Tags",
+  "navigation.operations.company-product-catalog": "Company Product Catalog",
+  "navigation.operations.company-inventory": "Company Inventory",
+  "navigation.operations.orders": "Orders",
+  "navigation.operations.company-generic-products": "Company Generic Products",
+  "navigation.admin.units-of-measure": "Units of Measure",
+  "navigation.admin.packaging-types": "Packaging Types",
+  "navigation.admin.manufacturers": "Manufacturers",
+  "navigation.admin.grades": "Grades",
+  "navigation.admin.forms": "Forms",
+  "navigation.admin.conditions": "Conditions",
+  "navigation.admin.nmfc-numbers": "NMFC Numbers",
+  "navigation.admin.associations": "Associations",
+  "navigation.admin.logistics": "Logistics",
+  "navigation.admin.admin-settings": "Admin Settings",
   "dwolla.controllerTitlePopup": "Please read below for the definition of Controller in this context.",
   "dwolla.paymentPoweredBy": "Echo Global Chemical Exchange payment gateway is powered by:",
   "dwolla.confirmAcc": "Confirm Account Administrator Information",
