--- a/localization/en.json
+++ b/localization/en.json
@@ -147,8 +147,9 @@
   "errors.noSelected.content": "Please check that all order items have selected at least one.",
   "navigation.inventory": "Inventory",
   "navigation.orders": "Orders",
-  "navigation.inventoryMyProducts": "My Products",
   "navigation.inventoryMyListings": "My Listings",
+  "navigation.inventoryMyProducts": "My Products",
+  "navigation.inventoryGlobalPriceBook": "Global Price Book",
   "navigation.addInventory": "Add Inventory",
   "navigation.guestCompanies": "Guest Companies",
   "navigation.marketplace": "Marketplace",
@@ -2478,8 +2479,9 @@
   "title.settings.users": "Users",
   "title.settings.warehouses": "Warehouses",
   "title.settings.locations": "Locations",
-  "title.inventory.myProducts": "My Products",
   "title.inventory.myListings": "My Listings",
+  "title.inventory.myProducts": "My Products",
+  "title.inventory.globalPriceBook": "Global Price Book",
   "title.companies.users": "Users",
   "title.companies.companies": "Companies",
   "title.products.casProducts": "Cas Products",
