--- a/localization/en.json
+++ b/localization/en.json
@@ -2674,7 +2674,9 @@
   "dashboard.totalGuestProducts.title": "Total Products",
   "dashboard.totalValue.title": "Total Products Value",
   "dashboard.totalValueWithoutMilion.title": "Total Products Value",
+  "dashboard.totalInventoryCount.title": "Total Inventory Count",
   "dashboard.totalBroadcastedValue.title": "Total Broadcasted Value",
+  "dashboard.totalSales.title": "Total Sales",
   "dashboard.totalBroadcastedValueWithoutMilion.title": "Total Broadcasted Value",
   "dashboard.totalUsersCount.title": "Total Users Count",
   "dasboard.sales.graph.title": "Total Sum Of Sales Monthly",
