added new column to wanted board

--- a/localization/en.json
+++ b/localization/en.json
@@ -2580,6 +2580,7 @@
   "wantedBoard.neededBy": "Needed By",
   "wantedBoard.condition": "Condition",
   "wantedBoard.status": "Status",
+  "wantedBoard.type": "Type",
   "wantedBoard.searchByProductName": "Search by product name",
   "wantedBoard.requestProduct": "Request Product",
   "wantedBoard.chemical": "Chemical",
@@ -2631,6 +2632,9 @@
   "wantedBoard.submit": "Submit",
   "wantedBoard.purchased": "Purchased",
   "wantedBoard.rejected": "Rejected",
+  "wantedBoard.partial": "Partial",
+  "wantedBoard.completeImmediate": "Complete immediate",
+  "wantedBoard.completeSchedule": "Complete schedule",
   "wantedBoard.accept": "Accept",
   "wantedBoard.counter": "Counter",
   "wantedBoard.submitOfferHeader": "SUBMIT OFFER",
