#34977 Updated company analytics dashboard - pie charts headers.

--- a/localization/en.json
+++ b/localization/en.json
@@ -2695,8 +2695,8 @@
   "dasboard.companiesUser.title": "COMPANIES BY USERS",
   "dasboard.companiesProducts.title": "COMPANIES BY PRODUCTS",
   "dasboard.companiesTransactions.title": "COMPANIES BY SALES",
-  "dasboard.productsQuantity.title": "PRODUCTS BY QUANTITY",
-  "dasboard.productsValue.title": "PRODUCTS BY VALUE",
+  "dasboard.productsQuantity.title": "PRODUCTS SOLD BY QUANTITY",
+  "dasboard.productsValue.title": "PRODUCTS SOLD BY VALUE",
   "dasboard.productsPopular.title": "PRODUCTS BY POPULAR",
   "dasboard.companyPurchase": "PURCHASES",
   "dasboard.companySales": "SALES",
