#35120 Analytics dashboard updates.

--- a/localization/en.json
+++ b/localization/en.json
@@ -2723,6 +2723,12 @@
   "dashboard.dateFilter.lastYear": "Last year",
   "dashboard.dateFilter.allTime": "All the time",
   "dashboard.error.invalidDate": "Invalid Date",
+  "dashboard.dateFilter.max": "Max",
+  "dashboard.dateFilter.1year": "1 year",
+  "dashboard.dateFilter.ytd": "YTD",
+  "dashboard.dateFilter.6months": "6 months",
+  "dashboard.dateFilter.3months": "3 months",
+  "dashboard.dateFilter.1month": "1 month",
   "dashboard.error.invalidDateRange": "Invalid Date Range",
   "global.scrollDown": "Scroll down for load more items",
   "cart.changeAddress": "CHANGE ADDRESS",
