--- a/localization/en.json
+++ b/localization/en.json
@@ -490,6 +490,7 @@
   "global.currency": "Currency",
   "global.apply": "Apply",
   "global.continue": "Continue",
+  "global.requestHold": "Request Hold",
   "global.roles": "Roles",
   "global.lastLogin": "Last Login",
   "global.enableUser": "Enable User",
