--- a/localization/en.json
+++ b/localization/en.json
@@ -2497,6 +2497,7 @@
   "hold.cancel": "Cancel",
   "hold.approve": "Approve",
   "hold.listings": "Listings",
+  "hold.hold": "Hold",
   "hold.holds": "Holds",
   "hold.buy": "Buy",
   "tutorial.locations.title": "Add Branches",
