--- a/localization/en.json
+++ b/localization/en.json
@@ -1277,6 +1277,8 @@
   "filter.selectGrade": "Select Grade (Multiple Select)",
   "filter.selectCondition": "Select Condition (Multiple Select)",
   "filter.selectForm": "Select Form (Multiple Select)",
+  "filter.saveEmptyFilterHeader": "Empty Filter",
+  "filter.saveEmptyFilter": "There are no any filters configured",
   "dataTable.ProductName": "Product Name",
   "dataTable.ProductNumber": "Product Number",
   "dataTable.Available": "Available PKGs",
