#35168 Wanted Board rework.

--- a/localization/en.json
+++ b/localization/en.json
@@ -2572,11 +2572,12 @@
   "wantedBoard.deliveryLoc": "Delivery Loc",
   "wantedBoard.deliveryLocation": "Delivery Location",
   "wantedBoard.deliveryPriceMax": "Delivery Price Max",
-  "wantedBoard.measurement": "Measurement",
+  "wantedBoard.weightUnit": "Weight Unit",
   "wantedBoard.meas": "Meas",
   "wantedBoard.fobQuote": "FOB Quote",
   "wantedBoard.deliveredQuote": "Delivered Quote",
-  "wantedBoard.casNumber": "CAS Number",
+  "wantedBoard.functionalEquivalent": "Functional Equivalent",
+  "wantedBoard.dateNeededBy": "Date Needed By",
   "wantedBoard.neededBy": "Needed By",
   "wantedBoard.condition": "Condition",
   "wantedBoard.status": "Status",
@@ -2608,7 +2609,7 @@
   "wantedBoard.selectManufacturer": "Select Manufacturer",
   "wantedBoard.selectCondition": "Select Condition",
   "wantedBoard.selectCountryOfOrigin": "Select Country of Origin",
-  "wantedBoard.origin": "Origin",
+  "wantedBoard.countryOfOrigin": "Country of Origin",
   "wantedBoard.selectOrigin": "Select Origin",
   "wantedBoard.selectCountry": "Select Country",
   "wantedBoard.selectState": "Select State",
