#35168 Wanted Board reworked, Added advanced filters.

--- a/localization/en.json
+++ b/localization/en.json
@@ -2586,7 +2586,8 @@
   "wantedBoard.condition": "Condition",
   "wantedBoard.status": "Status",
   "wantedBoard.type": "Type",
-  "wantedBoard.searchByProductName": "Search by product name",
+  "wantedBoard.searchByProductName": "Search by product name...",
+  "wantedBoard.showByCasProduct": "Show by CAS Product:",
   "wantedBoard.requestProduct": "Request Product",
   "wantedBoard.chemical": "Chemical",
   "wantedBoard.submitOffer": "Submit Offer",
