#35168 Wanted Board / Advanced filters fixes.

--- a/localization/en.json
+++ b/localization/en.json
@@ -1166,6 +1166,7 @@
   "filter.incomplete": "Incomplete",
   "filter.chemicalProductName": "Chemical / Product Name",
   "filter.productGroupName": "Product Group Name",
+  "filter.productName": "Product Name",
   "filter.saved": "Saved",
   "filter.searchLocation": "Search Location",
   "filter.searchWarehouse": "Search Warehouse",
@@ -1234,7 +1235,6 @@
   "filter.customer": "Customer",
   "filter.customerName": "Company Name",
   "filter.product": "Product/CAS",
-  "filter.productName": "Name/Code",
   "filter.status": "Status",
   "filter.orderStatus": "Order Status",
   "filter.quantity": "Quantity",
