#35168 Wanted Board / Advanced filters fixes.

--- a/localization/en.json
+++ b/localization/en.json
@@ -1167,6 +1167,8 @@
   "filter.chemicalProductName": "Chemical / Product Name",
   "filter.productGroupName": "Product Group Name",
   "filter.productName": "Product Name",
+  "filter.casProduct": "CAS Product",
+  "filter.dateNeededBy": "Date Needed By",
   "filter.saved": "Saved",
   "filter.searchLocation": "Search Location",
   "filter.searchWarehouse": "Search Warehouse",
@@ -1239,6 +1241,7 @@
   "filter.orderStatus": "Order Status",
   "filter.quantity": "Quantity",
   "filter.price": "Price Range",
+  "filter.maximumPricePerUOM": "Maximum Price per UOM",
   "filter.packaging": "Packaging",
   "filter.grade": "Grade",
   "filter.condition": "Condition",
@@ -2468,6 +2471,7 @@
   "filter.selectOption": "Select Option",
   "filter.searchProductsInventory": "Chemical, CAS, Trade",
   "filter.searchProductGroup": "Search Product Group",
+  "filter.searchCasProduct": "Search CAS Product",
   "title.settings": "Settings - {tab}",
   "title.settings.bank-accounts": "Bank Accounts",
   "title.settings.branches": "Branches",
@@ -2652,6 +2656,11 @@
   "wantedBoard.notify.noInventoryItems.Content": "You do not have any Inventory item matching the requested item to offer.",
   "wantedBoard.pendingOffer": "Pending Offer",
   "wantedBoard.pendingCounterOffer": "Pending Counter Offer",
+  "wantedBoard.showAllSttaus": "Show All Status",
+  "wantedBoard.showPendingOffer": "Show Pending Offer",
+  "wantedBoard.showRejected": "Show Rejected",
+  "wantedBoard.showPendingCounterOffer": "Show Pending Counter Offer",
+  "wantedBoard.showAccepted": "Show Accepted",
   "global.enabled": "Enabled",
   "global.selectTags": "Select tags",
   "global.marketSegments": "Market Segments",
