#35277 Updated Advanced Filters button in all pages.

--- a/localization/en.json
+++ b/localization/en.json
@@ -331,6 +331,7 @@
   "global.flowTime": "Flow Time (ISO 2431)",
   "global.heatOfCombustion": "Heat Of Combustion",
   "global.filter": "Filter",
+  "global.filters": "Filters",
   "global.casProduct": "Regulatory - CAS Product",
   "global.regulatoryEpa": "EPA",
   "global.regulatoryDhs": "DHS",
@@ -906,7 +907,6 @@
   "global.25percentage": "25%",
   "global.packagingDimensions": "Packaging Dimensions",
   "global.freight": "Freight",
-  "global.advancedFilters": "Advanced Filters",
   "global.select": "Select",
   "import.assayMin": "Assay Min",
   "import.assayMax": "Assay Max",
