#35274 Fixed 'Officer' and 'regularly' words typos in Velloci register page.

--- a/localization/en.json
+++ b/localization/en.json
@@ -2758,7 +2758,7 @@
   "velloci.verifyPersonalInformation": "VERIFY PERSONAL INFORMATION",
   "velloci.termsAndConditions": "TERMS AND CONDITIONS",
   "velloci.controlPerson.infoContent2": "If this does not apply to you, you will not be able to continue. Please get the person who will be the Control Person  of this account to continue.",
-  "velloci.controlPerson.infoContent": "A control person is a single individual with significant responsibility to control, manage or direct legal entity customer, including an executive ocer or senior manager (e.g. a Chief Executive Ocer, Chief Financial Ocer, Chief Operating Ocer, Managing Member, General Partner, President, Vice President or Treasurer); or any other individual who regulary performs similar functions.",
+  "velloci.controlPerson.infoContent": "A control person is a single individual with significant responsibility to control, manage or direct legal entity customer, including an executive Officer or senior manager (e.g. a Chief Executive Officer, Chief Financial Officer, Chief Operating Officer, Managing Member, General Partner, President, Vice President or Treasurer); or any other individual who regularly performs similar functions.",
   "velloci.controlPerson.businessType": "Business Type",
   "velloci.controlPerson.kindBusiness": "What kind of business are you opening this account for?",
   "velloci.controlPerson.legalBusinessName": "Legal Business Name",
