#35352 Updated dashboard fields. Added currency support, removed pie charts.

--- a/localization/en.json
+++ b/localization/en.json
@@ -2692,17 +2692,17 @@
   "validation.minOneGroup": "At least one group should be selected",
   "validation.minOneCompany": "At least one company should be selected",
   "dashboard.title": "Analytics Dashboard",
-  "dashboard.totalCompanies.title": "Total Companies",
-  "dashboard.totalGuestCompanies.title": "Total Guest Companies",
-  "dashboard.totalProducts.title": "Total Products",
+  "dashboard.totalCompanies.title": "Companies",
+  "dashboard.totalGuestCompanies.title": "Guest",
+  "dashboard.totalProducts.title": "Products",
   "dashboard.totalGuestProducts.title": "Total Products",
   "dashboard.totalValue.title": "Total Products Value",
-  "dashboard.totalValueWithoutMilion.title": "Total Products Value",
-  "dashboard.totalInventoryCount.title": "Total Inventory Count",
-  "dashboard.totalBroadcastedValue.title": "Total Broadcasted Value",
-  "dashboard.totalSales.title": "Total Sales",
-  "dashboard.totalBroadcastedValueWithoutMilion.title": "Total Broadcasted Value",
-  "dashboard.totalUsersCount.title": "Total Users Count",
+  "dashboard.totalValueWithoutMilion.title": "Products",
+  "dashboard.totalInventoryCount.title": "Inventory",
+  "dashboard.totalBroadcastedValue.title": "Broadcasted",
+  "dashboard.totalSales.title": "Sales",
+  "dashboard.totalBroadcastedValueWithoutMilion.title": "Broadcasted",
+  "dashboard.totalUsersCount.title": "Users",
   "dasboard.sales.graph.title": "Total Sum Of Sales Monthly",
   "dasboard.companyPurchase.graph.title": "Company Sum Of Purchases Monthly",
   "dasboard.companySales.graph.title": "Company Sum Of Sales Monthly",
