#35270 Updated Wanted Board tab and pages titles.

--- a/localization/en.json
+++ b/localization/en.json
@@ -181,8 +181,8 @@
   "navigation.guests": "Guests",
   "navigation.chat": "Chat",
   "navigation.wantedBoardListings": "Listings",
-  "navigation.wantedBoardBidsSent": "Bids Sent",
-  "navigation.wantedBoardBidsReceived": "Bids Received",
+  "navigation.wantedBoardBidsSent": "My Offers",
+  "navigation.wantedBoardBidsReceived": "My Requests",
   "navigation.cas-products": "Cas Products",
   "navigation.product-catalog": "Product Catalog",
   "navigation.product-groups": "Product Groups",
@@ -2554,8 +2554,8 @@
   "settings.warehouse.certificates.message.content": "If you want to update the documents, you will replace all existing certificates for warehouses in this state.",
   "settings.warehouse.certificateIcon.header": "Certificate is attached and so will be visible anywhere",
   "title.wantedBoardListings": "Listings",
-  "title.wantedBoardBidsReceived": "Bids Received",
-  "title.wantedBoardBidsSent": "Bids Sent",
+  "title.wantedBoardBidsReceived": "My Requests",
+  "title.wantedBoardBidsSent": "My Offers",
   "wantedBoard.product": "Product",
   "wantedBoard.productName": "Product Name",
   "wantedBoard.enterProductName": "Enter any Product Name",
