#35375 Updated Guest tab and Add button.

--- a/localization/en.json
+++ b/localization/en.json
@@ -177,7 +177,7 @@
   "navigation.documentTypes": "Document Types",
   "navigation.marketSegments": "Market Segments",
   "navigation.locations": "Locations",
-  "navigation.manageGuests": "Manage Guests",
+  "navigation.manageGuests": "Guests",
   "navigation.guests": "Guests",
   "navigation.chat": "Chat",
   "navigation.wantedBoardListings": "Listings",
@@ -1088,7 +1088,7 @@
   "manageGuests.companyEdit.tab.documentManager": "Document Manager",
   "manageGuests.companyEdit.tab.quote": "Quote",
   "manageGuests.searchGuest": "Search guest",
-  "manageGuests.addCompany": "Add Company",
+  "manageGuests.addCompany": "Add Guest",
   "manageGuests.searchClient": "Search Client",
   "manageGuests.addClient": "Add Client",
   "manageGuests.searchDocuments": "Search Documents",
