--- a/localization/en.json
+++ b/localization/en.json
@@ -541,6 +541,8 @@
   "global.chooseOption": "Choose an option",
   "global.add": "Add",
   "global.email": "E-mail",
+  "global.email.support": "support@echosystem.com",
+  "global.phone.support": "833-321-3246",
   "global.surname": "Surname",
   "global.saveAndContinue": "Save and Continue",
   "global.lastname": "Last Name",
@@ -2745,13 +2747,16 @@
   "settings.placeholder.accontType": "Enter Account Type",
   "settings.placeholder.accontName": "Enter Account Name",
   "settings.placeholder.routingName": "Enter Routing Name",
-  "velloci.setupIndicator.bussinesVerification": "Business Verification (KYB)",
+  "velloci.setupIndicator.bussinesVerificationKYB": "Business Verification (KYB)",
+  "velloci.setupIndicator.bussinesVerification": "Business Verification",
   "velloci.setupIndicator.enity": "Information needed to verify your business: Entity",
+  "velloci.setupIndicator.mainSections": "There are two main sections that will need to be completed: your company verification, and beneficial owner information.",
   "velloci.setupIndicator.moreBeneficialOwners": "If more Beneficial Owners, Re-Enter Personal Identity Verification (KYC)",
   "velloci.setupIndicator.personalIdentify": "Personal Identity Verification (KYC)",
   "velloci.setupIndicator.individualOwners": "Information needed for Control Person and/or Beneficial Owners: Individual",
   "velloci.submitApplication": "Submit Application",
   "velloci.controlPerson": "CONTROL PERSON",
+  "velloci.companyVerification": "COMPANY VERIFICATION",
   "velloci.businessInfo": "BUSINESS INFO",
   "velloci.companyFormationDocument": "COMPANY FORMATION DOCUMENT",
   "velloci.ownerInformation": "OWNER INFORMATION",
@@ -2791,6 +2796,7 @@
   "velloci.formationDocument.availableDocuments": "Add as many documents as you have available.",
   "velloci.formationDocument.documentTypeLabel": "Select document type",
   "velloci.formationDocument.documentTypePlaceholder": "Pick one",
+  "velloci.companyVerification.infoContent": "We require the social security number, legal name, and address for each beneficial owner (a beneficial owner is any owner who owns 25% or more of the business) . If the company is publicly traded and there aren't any owners with 25% or more ownership, we require the financial controller's full SSN, legal name, and address. If you do not have access to this information, you can email the relevant parties from within the app and they can enter their information securely themselves. You may complete the registration while they submit their information.",
   "velloci.ownerInformation.infoContent": "This information is required under the Bank Secrecy Act and is intended to assist the government and law enforcement int the ongoing fight against money laundering and the financing of terrorism.",
   "velloci.ownerInformation.requiredTitle": "Required information under the Bank Secrecy Act",
   "velloci.ownerInformation.beneficialOwner": "Are you the beneficial owner?",
@@ -2803,6 +2809,9 @@
   "velloci.ownerInformation.wouldComplete": "Would you like to complete this form for the remaining beneficial owners or email them a link to complete?",
   "velloci.ownerInformation.needInfo": "Here is the info you'll need:",
   "velloci.ownerInformation.obtainInfoTitle": "Can't Obtain this Information",
+  "velloci.companyVerification.infoTitle": "Beneficial Owner Information",
+  "velloci.companyVerification.infoText": "Thank you for taking the time to register your business with EchoSystem. Feel free to reach out with any questions you may have about this process. Feel free to reach out to us at {email} or {phoneNumber} if you have any questions about this process, we are here to help.",
+  "velloci.companyVerification.text": "We require the full legal business name and registered business address. In addition, you will need to submit one of the following five documents in PDF format. It is important that the document/s you submit clearly shows your company EIN number. Please have these ready prior to starting your verification. We require one of the following:",
   "velloci.ownerInformation.obtainInfoContent": "No problem. Please select email and we will send them a link to complete the process.",
   "velloci.personalInfo.firstName.placeholder": "Enter first name",
   "velloci.personalInfo.middleName.placeholder": "Enter middle name",
@@ -2877,5 +2886,11 @@
   "submitOffer.pkgAmount": "PKG Amount",
   "submitOffer.availableDate": "Available Date",
   "submitOffer.total": "Total",
-  "settings.velloci.difficulties": "Velloci is experiencing some difficulties, please try again later"
+  "settings.velloci.difficulties": "Velloci is experiencing some difficulties, please try again later",
+  "velloci.companyVerification.list.ein": "EIN Verification Letter (IRS Issued SS4 Confirmation Letter)",
+  "velloci.companyVerification.list.field": "Filed and stamped articles of incorporation",
+  "velloci.companyVerification.list.tax": "Sales/Use Tax License",
+  "velloci.companyVerification.list.license": "Business License",
+  "velloci.companyVerification.list.certificate": "Certificate of Good Standing"
+
 }
