--- a/localization/en.json
+++ b/localization/en.json
@@ -2533,6 +2533,10 @@
   "tutorial.addAccount.button": "Add Account",
   "tutorial.congratulation.title": "Congratulations, you have finished the setup!",
   "tutorial.congratulation.content": "This example text is going to run a bit longer so that you can see how spacing within an alert works with kind of content.",
+  "tutorial.businessVerification.title": "Business Verification",
+  "tutorial.businessVerification.content": "EchoSystem is a secure marketplace where each participant is vetted and approved prior to being activated. Since the system can facilitate transactions over $6,000, EchoSystem must comply with the anti-money laundering provisions outlined in the US Patriot Act. For these reasons, each participant company must pass our business verification requirements.",
+  "tutorial.businessVerification.beginNow": "Begin now",
+  "tutorial.businessVerification.estimated": "Estimated time ~ 10 minutes",
   "sidebar.addNew": "ADD NEW",
   "sidebar.edit": "EDIT",
   "sidebar.certificates": "CERTIFICATES",
