#35392 Added Beneficial Owners emailing popup, registration page.

--- a/localization/en.json
+++ b/localization/en.json
@@ -726,6 +726,7 @@
   "global.sdsIssuedDate": "SDS Issued Date",
   "global.sdsPreparedBy": "SDS Prepared by",
   "global.sensitization": "Sensitization",
+  "global.send": "Send",
   "global.signalWord": "Signal Word",
   "global.skinContact": "Skin Contact",
   "global.solubility": "Solubility",
@@ -2883,6 +2884,7 @@
   "velloci.document.explanatory.li22": "Sales/Use Tax License",
   "velloci.document.explanatory.li23": "Business License",
   "velloci.document.explanatory.li24": "Certificate of Good Standing",
+  "velloci.emailPopup.header": "Invite Beneficial Owners",
   "submitOffer.optionToOffer": "Option to offer",
   "submitOffer.optionToOffer.placeholder": "Select option",
   "submitOffer.price": "Price",
