adjusted UX Global Broadcast

--- a/localization/en.json
+++ b/localization/en.json
@@ -296,6 +296,7 @@
   "casProduct.internationalAICS": "AICS",
   "casProduct.internationalIECSC": "IECSC",
   "casProduct.internationalKECL": "KECL",
+  "global.reset": "Reset",
   "global.placeholder.taxId": "Enter Tax ID",
   "global.placeholder.deliveryNotes": "Write delivery notes here",
   "global.placeholder.notes": "Write notes here",
@@ -2546,6 +2547,7 @@
   "broadcast.turnoff.title": "Price book for this offer has been deleted",
   "broadcast.turnoff.content": "Global rules are going to be used. To turn off broadcasting completely, edit it inside Edit tab.",
   "broadcast.toAll": "Broadcast to All",
+  "broadcast.search": "Search by Company Name, Branch, State, or Country",
   "order.detail.documents.issuer": "Issuer",
   "order.detail.documents.date": "Document Date",
   "order.detail.documents.type": "Type",
