--- a/localization/en.json
+++ b/localization/en.json
@@ -2547,6 +2547,7 @@
   "broadcast.turnoff.title": "Price book for this offer has been deleted",
   "broadcast.turnoff.content": "Global rules are going to be used. To turn off broadcasting completely, edit it inside Edit tab.",
   "broadcast.toAll": "Broadcast to All",
+  "broadcast.select.templates": "Select From Templates",
   "broadcast.search": "Search by Company Name, Branch, State, or Country",
   "order.detail.documents.issuer": "Issuer",
   "order.detail.documents.date": "Document Date",
